Can now create multiple windows, move them around, and they overlap correctly.

--- a/examination/client/debug/stylesheet/style.css
+++ b/examination/client/debug/stylesheet/style.css
@@ -1,10 +1,25 @@
-#test
-{
+body {
+    background-color: black;
+}
+
+.appWindow {
     background-color: grey;
     width: 500px;
     height: 500px;
     position: absolute;
+    border: 2px solid white;
+    top: 100px;
+    left: 100px;
+}
 
-    top: 25px;
-    left: 25px;
+.topbar {
+    width: 100%;
+    height: 25px;
+    background-color: white;
+}
+
+#button {
+    background-color: yellowgreen;
+    width: 25px;
+    height: 25px;
 }
